results/classifier/zero-shot/105/device/1871005
device: 0.856
instruction: 0.762
other: 0.685
graphic: 0.543
mistranslation: 0.533
vnc: 0.506
semantic: 0.484
network: 0.450
socket: 0.402
boot: 0.349
assembly: 0.213
KVM: 0.076

build fails on CLOCK_MONOTONIC

Moc OS X.11.6 El Capitan

build fails on this 

/Users/alba/Downloads/qemu-5.0.0-rc1/include/qemu/timer.h:843:9: warning: 
      implicit declaration of function 'clock_gettime' is invalid in C99
      [-Wimplicit-function-declaration]
        clock_gettime(CLOCK_MONOTONIC, &ts);
        ^
/Users/alba/Downloads/qemu-5.0.0-rc1/include/qemu/timer.h:843:23: error: use of
      undeclared identifier 'CLOCK_MONOTONIC'
        clock_gettime(CLOCK_MONOTONIC, &ts);
                      ^
1 warning and 1 error generated.
make: *** [trace/control.o] Error 1

Hi; I'm afraid that OSX 10.11 "El Capitan" isn't a supported build platform for QEMU. Our official support policy is that we support the two most recent versions (currently 10.14 Mojave and 10.15 Catalina); QEMU may also run on some earlier OSX versions we don't support, but we don't guarantee that or carry workarounds for missing functionality on those earlier versions. In this particular case, CLOCK_MONOTONIC was added to OSX 10.12 "Sierra".


